hphp/hack/test/typecheck/reified_generics/box_function_arity.php.exp
File "box_function_arity.php", line 8, characters 12-17:
Wrong number of type arguments (expected 2, got 1) (Typing[4101])
File "box_function_arity.php", line 4, characters 7-7:
Definition is here
